--- a/plugin-api/pom.xml
+++ b/plugin-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.fireflyframework</groupId>
         <artifactId>fireflyframework-plugins</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>26.01.01</version>
     </parent>
 
     <artifactId>plugin-api</artifactId>
