fix: add unified exception hierarchy and reactive pattern fixes
- Add fireflyframework-kernel dependency for unified exceptions
- Fix fire-and-forget error handling patterns

--- a/plugin-api/pom.xml
+++ b/plugin-api/pom.xml
@@ -15,4 +15,13 @@
 
     <name>Firefly Framework - Plugin API</name>
     <description>Core API and interfaces for the Firefly plugin system</description>
+
+    <dependencies>
+        <!-- Firefly Kernel (foundational: exceptions, shared abstractions) -->
+        <dependency>
+            <groupId>org.fireflyframework</groupId>
+            <artifactId>fireflyframework-kernel</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
